# ai-del-2

./: .gitignore  03_kod_regression.ipynb  cuda_test.py  dataset_practice.ipynb  deep_learning_koncist_exempel.ipynb  kapitel_7_uppgifter.ipynb  kapitel_8_uppgifter.ipynb  klassificering_koncist_exempel.ipynb  main.py  pyproject.toml  test.ipynb
.ipynb_checkpoints/: dataset_practice-checkpoint.ipynb  deep_learning_koncist_exempel-checkpoint.ipynb  klassificering_koncist_exempel-checkpoint.ipynb  test-checkpoint.ipynb
untitled_project/: oracle.json
untitled_project/trial_00/: trial.json
untitled_project/trial_01/: trial.json
untitled_project/trial_02/: trial.json
untitled_project/trial_03/: trial.json
untitled_project/trial_04/: trial.json
untitled_project/trial_05/: trial.json
untitled_project/trial_06/: trial.json
untitled_project/trial_07/: trial.json
untitled_project/trial_08/: trial.json
untitled_project/trial_09/: trial.json
untitled_project/trial_10/: trial.json
untitled_project/trial_11/: trial.json
untitled_project/trial_12/: trial.json
untitled_project/trial_13/: trial.json
untitled_project/trial_14/: trial.json
untitled_project/trial_15/: trial.json
untitled_project/trial_16/: trial.json
untitled_project/trial_17/: trial.json
untitled_project/trial_18/: trial.json
untitled_project/trial_19/: trial.json
